# vision

./: CMakeLists.txt  README.md  deps.sh  package.xml  readme.md  setup.sh
configuration/: config.yaml
configuration/camera/: realSenseCamera_d435i.yaml  realSenseCamera_d453i.yaml  rosCamera.yaml  usbCamera.yaml
include/: CameraHandler.h  ConcurrentQueue.hpp  ConfigManager.hpp  DepthEstimatorFactory.h  Detection.hpp  ICamera.hpp  IDepthEstimator.hpp  IInferenceEngine.hpp  IModel.hpp  IModelOutput.hpp  InferenceHandler.h  Logger.hpp  MidasModel.h  MobileNetSSDModel.hpp  ModelContext.hpp  ModelHandler.h  MonocularDepthEstimator.h  OpenCvEngine.h  PoseEstimationHandler.h  RateController.h  UsbCamera.h  Vision.h  YoloModel.h
src/: CameraHandler.cpp  DepthEstimatorFactory.cpp  InferenceHandler.cpp  ModelFactory.cpp  ModelHandler.cpp  MonocularDepthEstimator.cpp  OpenCvEngine.cpp  PoseEstimationHandler.cpp  RateController.cpp  UsbCamera.cpp  Vision.cpp  YoloModel.cpp  main.cpp
src/camera/: CMakeLists.txt  CameraData.hpp  CameraFactory.cpp  CameraFactory.h  CameraFrame.hpp  CameraHandler.cpp  CameraHandler.h  CameraParams.hpp  ICamera.hpp  RealSenseCamera_d435i.cpp  RealSenseCamera_d435i.h  RosCamera.cpp  RosCamera.h  UsbCamera.cpp  UsbCamera.h
src/detection/: ArcuoBoardDetector.cpp  ArucoBoardDetector.h  CMakeLists.txt  EngineFactory.cpp  EngineFactory.h  IInferenceEngine.hpp
src/general/: BoardLocatorModule.cpp  BoardLocatorModule.h  CMakeLists.txt  Calibration.cpp  CommandHandler.cpp  CommandHandler.h  ConcurrentQueue.hpp  ConfigManager.hpp  DetectedObject.hpp  DetectedObjectManager.cpp  DetectedObjectManager.h  IModule.hpp  NavDataHandler.cpp  NavDataHandler.h  ObjectLocatorModule.cpp  ObjectLocatorModule.h  PointCloudViewer.cpp  PointCloudViewer.h  RosTopicManager.hpp  Types.hpp  Utils.hpp  Vision.cpp  Vision.h
src/inference/: CMakeLists.txt  EngineFactory.cpp  InferenceHandler.cpp  ObjectDetectionHandler.cpp  ObjectDetectionHandler.h  OnnxEngine.cpp  OnnxEngine.h
src/iris_bringup/: CMakeLists.txt  package.xml
src/iris_bringup/configuration/camera/: rosCamera.yaml
src/iris_bringup/launch/: base.launch.py
src/iris_camera/: CMakeLists.txt  package.xml
src/iris_camera/include/iris_camera/: CameraContext.hpp  CameraData.hpp  CameraDriver.h  CameraFactory.h  ICamera.hpp  RealSenseCamera_d435i.h  RosCamera.h  UsbCamera.h
src/iris_camera/src/: CameraDriver.cpp  CameraFactory.cpp  RateController.cpp  RealSenseCamera_d435i.cpp  RosCamera.cpp  UsbCamera.cpp  main.cpp
src/iris_common/: CMakeLists.txt  package.xml
src/iris_common/include/iris_common/: ConcurrentQueue.hpp  Logger.hpp  RosTopicManager.hpp
src/iris_core/: CMakeLists.txt  package.xml
src/iris_core/configuration/tags/: testBoard.yaml
src/iris_core/src/: main.cpp
src/iris_core/src/camera/: CMakeLists.txt  CameraContext.hpp  CameraHandler.cpp  ICamera.hpp  RealSenseCamera_d435i.h  RosCamera.h
src/iris_core/src/detection/: ArcuoBoardDetector.cpp  ArucoBoardDetector.h  InferenceHandler.h  ObjectDetectionHandler.h  OpenCvEngine.h
src/iris_core/src/general/: BoardLocatorModule.cpp  BoardLocatorModule.h  CMakeLists.txt  Calibration.h  CameraData.hpp  CameraHandler.cpp  CameraHandler.h  CameraParams.hpp  CommandHandler.cpp  CommandHandler.h  ConfigManager.hpp  DetectedObject.hpp  DetectedObjectManager.cpp  DetectedObjectManager.h  NavDataHandler.cpp  NavDataHandler.h  ObjectLocatorModule.cpp  ObjectLocatorModule.h  ObjectPoseFilter.cpp  ObjectPoseFilter.h  PointCloudViewer.cpp  PointCloudViewer.h  RosTopicManager.hpp  Utils.hpp  Vision.cpp  Vision.h
src/iris_core/src/model/: CMakeLists.txt  Detection.hpp  IModel.hpp  IModelOutput.hpp  MidasModel.cpp  MobileNetSSDModel.hpp  ModelContext.hpp  ModelFactory.h
src/iris_core/src/pose/: ObjectCloudGenerator.h  PoseEstimationHandler.h
src/iris_msgs/: CMakeLists.txt  package.xml
src/iris_msgs/msg/: CameraFrame.msg
src/model/: CMakeLists.txt  Detection.hpp  IModel.hpp  MobileNetSSDModel.hpp  ModelFactory.cpp  ZoeDepthModel.cpp  ZoeDepthModel.h
src/pose/: CMakeLists.txt  IDepthEstimator.hpp  MonocularDepthEstimator.cpp  MonocularDepthEstimator.h  ObjectCloudGenerator.cpp  ObjectCloudGenerator.h  PoseEstimationHandler.cpp  PoseEstimationHandler.h  RealSenseDepthEstimator.cpp  RealSenseDepthEstimator.h  StereoDepthEstimator.cpp  StereoDepthEstimator.h
tools/: convertZoe.py
