<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iris_camera</name>
  <version>0.0.0</version>
  <description>Standalone camera capture node - publishes iris_msgs/CameraFrame</description>
  <maintainer email="samlovelace12@gmail.com">sam</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>iris_msgs</depend>
  <depend>iris_common</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <exec_depend>iris_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
